--- a/Infrastructure/ECommerce.Persistance/ECommerce.Persistance.csproj
+++ b/Infrastructure/ECommerce.Persistance/ECommerce.Persistance.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\..\Core\ECommerce.Application\ECommerce.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Concretes\" />
+  </ItemGroup>
+
 </Project>
