Order - Customer - Product Entities and database connection process completed

--- a/Presentation/ECommerce.API/appsettings.json
+++ b/Presentation/ECommerce.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PostgreSQL": "Server=localHost;Port=5432;Database=ECommerceDb;User ID=postgres;Password=Password*-1;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
